log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:52:28 PM UTC 2026: 
 graph.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:51:18: error: implicit declaration of function ‘mapsearch’; did you mean ‘map_search’? [-Wimplicit-function-declaration]
   51 |     MapPair *k = mapsearch(g->adjacencyMap, (void*) label1);
      |                  ^~~~~~~~~
      |                  map_search
graph.c:51:18: error: initialization of ‘MapPair *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
b6c8e4c
Thu May 14 08:52:38 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
d819ed5
Sat May 16 06:32:38 PM UTC 2026: 
 graph.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
f861433
Sat May 16 06:34:31 PM UTC 2026: 
 graph.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
========================================
ff251d6
Sat May 16 07:09:37 PM UTC 2026: 
 graph.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
87c67e2
Sat May 16 07:10:29 PM UTC 2026: 
 graph.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:23: error: too few arguments to function ‘map_create’
   31 |     g->adjacencyMap = map_create();
      |                       ^~~~~~~~~~
In file included from graph.c:8:
map.h:14:6: note: declared here
   14 | Map *map_create(int (*is_equal)(void *key1, void *key2)); // unsorted map
      |      ^~~~~~~~~~
ecf849c
Sat May 16 07:11:00 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b7dfc65
Sat May 16 07:23:03 PM UTC 2026: 
 graph.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:38:33: error: passing argument 2 of ‘map_insert’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   38 |     map_insert(g->adjacencyMap, label, lista);
      |                                 ^~~~~
In file included from graph.c:8:
map.h:18:33: note: expected ‘void *’ but argument is of type ‘const char *’
   18 | void map_insert(Map *map, void *key, void *value);
      |                           ~~~~~~^~~
cc1: all warnings being treated as errors
cd62326
Sat May 16 10:34:28 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:38:33: error: passing argument 2 of ‘map_insert’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   38 |     map_insert(g->adjacencyMap, label, lista);
      |                                 ^~~~~
In file included from graph.c:8:
map.h:18:33: note: expected ‘void *’ but argument is of type ‘const char *’
   18 | void map_insert(Map *map, void *key, void *value);
      |                           ~~~~~~^~~
cc1: all warnings being treated as errors
98e0471
